# auto-ants

./: .clang-format  CMakeLists.txt  README.md
cmake/: Dependencies.cmake
proto/: CMakeLists.txt  protocol.proto
py/: .gitignore  README.md  ants_common.py  find_in_map.py  format_test.py  make_photo.py  requirements.txt  scan_net.py
resources/: protocol.spicy
src/: CMakeLists.txt  main.cpp
